# tif1

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TOOLS.md  prek.toml  project-architecture.md  pyproject.toml
.github/: RELEASE_CHECKLIST.md  dependabot.yml
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  publish.yml  release.yml  wheels.yml
docs/: README.md  VERSIONING.md  architecture.mdx  design_language.md  docs.json  examples.mdx  getting-started.mdx  installation.mdx  introduction.mdx  migration-from-fastf1.mdx  quickstart.mdx  style.css
docs/api-reference/: async-fetch.mdx  cache.mdx  cdn.mdx  cli.mdx  config.mdx  core-utils.mdx  core.mdx  events.mdx  exceptions.mdx  fastf1-compat.mdx  fuzzy.mdx  http-session.mdx  http.mdx  io-pipeline.mdx  jupyter.mdx  lap-operations.mdx  models.mdx  overview.mdx  plotting.mdx  retry.mdx  schedule.mdx  types.mdx  utilities.mdx  utils.mdx  validation.mdx
docs/assets/: generate_all_charts.py  generate_annotated_speed_trace.py  generate_downforce_levels.py  generate_driver_laptimes.py  generate_gear_shifts.py  generate_gg_diagram.py  generate_lap_delta.py  generate_laptime_heatmap.py  generate_laptimes_distribution.py  generate_multi_driver_speed_comparison.py  generate_position_changes.py  generate_qualifying_grid.py  generate_speed_traces.py  generate_telemetry_comparison.py  generate_throttle_distance.py  generate_tire_degradation.py  generate_top_speeds.py  generate_track_acceleration_map.py  generate_track_brake_zones.py  generate_track_speed_map.py  generate_track_temperature.py  generate_track_throttle_map.py
docs/concepts/: backends.mdx  caching-strategy.mdx  cli.mdx  data-flow.mdx  jupyter.mdx  sessions.mdx
docs/guides/: best-practices.mdx  common-use-cases.mdx  data-visualization.mdx  error-handling.mdx
docs/reference/: cli-commands.mdx  contributing.mdx  data-schema.mdx  environment-variables.mdx  faq.mdx  troubleshooting.mdx
docs/tutorials/: advanced-telemetry.mdx  annotated-speed-trace.mdx  data-export.mdx  downforce-levels.mdx  driver-laptimes.mdx  gear-shifts-on-track.mdx  gg-diagram.mdx  lap-delta-comparison.mdx  laptime-heatmap.mdx  laptimes-distribution.mdx  multi-driver-speed-comparison.mdx  position-changes.mdx  qualifying-analysis.mdx  qualifying-results.mdx  race-analysis.mdx  race-pace-analysis.mdx  speed-traces.mdx  telemetry-comparison.mdx  throttle-distance.mdx  tire-degradation.mdx  tire-strategy.mdx  top-speeds.mdx  track-acceleration-map.mdx  track-brake-zones.mdx  track-speed-map.mdx  track-temperature.mdx  track-throttle-map.mdx  weather-impact.mdx
examples/: README.md  async_loading.py  basic_usage.py  cache_management.py  data_exploration.py  error_handling.py  event_lookup_examples.py  example.py  fast_telemetry.py  fastest_laps.py  fastest_telemetry.py  get_event_by_name_example.py  get_event_by_round_example.py  new_features_demo.py  plotting_colors_demo.py  polars_backend.py  sqlite_cache.py
scripts/: baseline_benchmark.py
scripts/baseline_results/: baseline_results.json
src/tif1/: __init__.py  async_fetch.py  cache.py  cdn.py  cli.py  config.py  core.py  events.py  exceptions.py  fastf1_compat.py  fuzzy.py  http_session.py  io_pipeline.py  jupyter.py  lap_ops.py  models.py  plotting.py  plotting_constants.py  retry.py  schedule_schema.py  session.py  types.py  utils.py  validation.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_async_fetch_batch_benchmark.py  test_async_fetch_cache_hit_benchmark.py  test_async_parallelism_validation.py  test_benchmarks.py  test_cache_benchmark.py  test_cache_memory_lookup_benchmark.py  test_cache_performance.py  test_cache_serialization_benchmark.py  test_core_driver_benchmark.py  test_core_driver_info_lookup_benchmark.py  test_core_fastest_laps_cold_benchmark.py  test_core_get_lap_benchmark.py  test_core_notebook_workflow_benchmark.py  test_core_real_cold_start_benchmark.py  test_core_telemetry_batch_benchmark.py  test_dataframe_performance.py  test_events_performance_benchmark.py  test_laptime_filter_benchmark.py  test_retry_circuit_benchmark.py  test_validation_anomaly_micro_benchmark.py  test_validation_benchmark.py  test_validation_lengths_check_benchmark.py  test_validation_telemetry_flags_benchmark.py
tests/integration/: __init__.py  test_integration.py
tests/property/: __init__.py  test_async_properties.py  test_cache_properties.py  test_circuit_breaker_properties.py  test_config_properties.py  test_resource_properties.py  test_sync_async_equivalence.py
tests/unit/: __init__.py  test_async_fetch.py  test_async_fetch_cleanup.py  test_async_fetch_executor.py  test_async_fetch_rate_limit.py  test_backend_conversion.py  test_cache.py  test_cache_init.py  test_cdn.py  test_cli.py  test_compatibility_coverage.py  test_concurrent_cache_operations.py  (+27 more)
(+16 files in other folders)
