[project]
name = "tif1"
version = "0.2.0"
description = "A faster alternative to fastf1 with the same bindings. Access Formula 1 timing data from TracingInsights Github cache (2018-current)"
readme = "README.md"
authors = [
    { name = "Tracing Insights", email = "tracing.insights@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "formula1",
    "f1",
    "motorsport",
    "racing",
    "telemetry",
    "data-analysis",
    "timing-data",
    "lap-times",
]
dependencies = [
    "pandas>=2.3.3,<3",
    "niquests>=3.16.1,<4",
    "pydantic>=2.12.5,<3",
    "typer>=0.21.0,<0.25.0",
    "rich>=14.2.0,<15",
    "typing-extensions>=4.15.0,<5",
    "nest-asyncio2>=1.7.2,<2",
    "matplotlib>=3.8.0,<4",
    "seaborn>=0.13.2,<1",
    "timple==0.1.8",
    "orjson>=3.11.7,<4",
    "rapidfuzz>=3.14.3,<4",
    "polars>=1.36.1,<2",
]

[project.urls]
Homepage = "https://github.com/TracingInsights/tif1"
Documentation = "https://docs.tracinginsights.com/docs"
Repository = "https://github.com/TracingInsights/tif1"
"Bug Tracker" = "https://github.com/TracingInsights/tif1/issues"
Changelog = "https://github.com/TracingInsights/tif1/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-xdist>=3.8.0,<4",
    "pytest-cov>=7.0.0,<8",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-benchmark>=5.2.3,<6",
    "pytest-mock>=3.15.1,<4",
    "pyarrow>=23.0.0,<24",
    "ruff>=0.14.10,<0.16.0",
    "ty>=0.0.18,<0.1.0",
    "prek>=0.3.3,<0.4.0",
    "pandas-stubs>=2.3.3.251219,<3",
    "hypothesis>=6.151.9,<7",
]

[project.scripts]
tif1 = "tif1.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tif1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/tif1 --cov-report=term-missing --cov-report=html --cov-report=xml -n auto --dist=loadfile -m \"not benchmark\" --ignore=tests/benchmarks"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests (fast, isolated tests)",
    "integration: marks tests as integration tests (tests with external dependencies)",
    "property: marks tests as property-based tests (using Hypothesis)",
    "benchmark: marks tests as benchmarks (performance tests, excluded by default)",
    "compliance_offline: marks offline fastf1 compatibility checks",
    "compliance_online: marks network-based fastf1 compatibility smoke checks",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/", "test_tif1.ipynb", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PD", "PL", "NPY", "PERF", "RUF"]
ignore = ["PLR0913", "PLR2004", "S101", "PLC0415", "PLW0603", "PERF203", "PLR0912", "PLR0911", "PLR0915", "EM101", "EM102", "RET504", "SIM102", "SIM105", "SIM108", "SIM117", "RUF001", "RUF003", "RUF022", "B904", "B905", "N806", "E501", "PTH123", "ARG001", "PD011", "UP007", "DTZ005", "ISC001", "PD901", "PLW0108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.coverage.run]
source = ["src/tif1"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "\\.\\.\\.",
    "pass",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0,<3",
]
